opam-version: "2.0"
name: "easy_logger"
version: "0.1"
synopsis: "Package to easily handle logging"
description: """
Inspired by the python logging module architecture.
"""
maintainer: "Name <email>"
authors: "Name <email>"
license: ""
homepage: ""
bug-reports: ""
dev-repo: ""
depends: [ "ocaml" "ocamlfind" ]
build: [
  ["./configure" "--prefix=%{prefix}%"]
  [make]
]
install: [make "install"]
