(documentation
 (package easy_logging)
 (mld_files :standard))

(rule
 (targets examples.mld)
;; (deps examples/logging_examples.ml)
;; (action (copy examples/logging_examples.ml more_examples.ml))
 (action (with-stdout-to examples.mld
                         (progn
                           (echo "{1 Examples}\n{[")
                           (cat examples/logging_examples.ml)
                           (echo "]}")
                           )))
 )
         

;; (alias
;;  (name all_test)
;;  (deps more_examples.mld)
;;  (package easy_logging))
 
(library
 (name easy_logging)
 (public_name easy_logging)
 (flags -w)
 (libraries
  unix
  )
 )

